Fixed image size on smaller resolutions

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
-#root {
-  margin: 0 auto;
-  text-align: center;
+body {
+  height: 100vh;
+  width: 100vw;
+  padding: 1rem;
+  display: flex;
+  background: var(--bg)
 }
 
 *,
@@ -11,12 +14,9 @@
   box-sizing: border-box;
 }
 
-body {
-  height: 100vh;
-  width: 100vw;
-  padding: 1rem;
-  display: flex;
-  background: var(--bg)
+#root {
+  margin: 0 auto;
+  text-align: center;
 }
 
 header {
@@ -71,6 +71,7 @@ button {
   justify-content: center;
   background: transparent;
   width: var(--card-width);
+  min-width: var(--card-min-width);
   animation: var(--card-enter);
   border-radius: var(--radius);
 }
@@ -111,7 +112,7 @@ button {
   }
 }
 
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 720px), screen and (max-height: 750px) {
   body {
     align-items: center;
   }
@@ -122,6 +123,14 @@ button {
     margin: auto;
     position: fixed;
     border-radius: 0;
+  }
+
+  .wins {
+    margin-left: 0;
+  }
+
+  .new-game-btn {
+    margin-right: 0;
   }
 
   .grid {
@@ -136,5 +145,4 @@ button {
   .card img {
     width: var(--card-width-mobile);
   }
-
 }
